# tecio-rs

./: .gitmodules  Cargo.toml  build.rs
src/: bindings.rs  common.rs  formats.rs  lib.rs  reader.rs  tests.rs  writer.rs
src/formats/: dat.rs  plt.rs  szplt.rs
tests/: heat.plt  heated_fin.plt  heated_fin.szplt  simple_write.szplt  test_heat.szplt  test_heated_fin.plt  test_heated_fin.szplt  with_aux.plt
