[package]
name = "tecio"
version = "0.3.2"
authors = ["Nanopro <nanopro1g@gmail.com>"]
edition = "2018"
description = "Rust simple binding for Tecplot tecio library."
license = "GPL-3.0"
build = "build/build.rs"

[dependencies]
libc = "0.2.51"
nom = "5.1"
thiserror="1"
vmap = "0.4"


[build-dependencies.cmake]
version = "0.1.42"
optional = true

[features]
link_static = ["cmake"]
link_dynamic = []
default = []